Add new open interest data entries for Lighter and Hyperliquid platforms, and update configuration settings for Streamlit and Claude integration.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,12 @@
 [server]
 headless = true
+enableCORS = false
+enableXsrfProtection = true
+maxUploadSize = 1
+
+[browser]
+gatherUsageStats = false
+
+[runner]
+fastReruns = true
+magicEnabled = false
